--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "hubot-slack": "^2.1.0",
     "soupselect": "^0.2.0",
     "underscore": "^1.3.3",
-    "underscore.string": "^2.3.0"
+    "underscore.string": "^2.3.0",
+    "wolfram": "^0.2.2"
   },
   "engines": {
     "node": ">= 0.8.x",
