--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "hosted-hubot",
-  "version": "2.7.1",
+  "name": "lester",
+  "version": "0.0.0",
   "private": true,
-  "author": "GitHub Inc.",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
-  "description": "A simple helpful robot for your Company",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
+  "author": "Matt Kemp <matt@mattikus.com>",
+  "description": "a crazy sonofabitch",
   "dependencies": {
-    "cleverbot-node": "^0.1.8",
-    "htmlparser": "^1.7.6",
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-slack": "^2.1.0",
-    "soupselect": "^0.2.0",
-    "underscore": "^1.3.3",
-    "underscore.string": "^2.3.0",
-    "wolfram": "^0.2.2"
+    "cleverbot-node": "0.2.1",
+    "hubot": "^2.15.0",
+    "hubot-catfacts": "^1.0.1",
+    "hubot-decides": "0.0.7",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-google-images": "^0.2.1",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.1.1",
+    "hubot-heroku-keepalive": "0.0.4",
+    "hubot-humanity": "^0.1.3",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.16.2",
+    "hubot-shipit": "^0.2.0",
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
-    "node": "^0.10.29",
-    "npm": ">= 1.1.x"
+    "node": "0.10.x"
   }
 }
