--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0",
-    "underscore": "^1.8.3",
-    "underscore.string": "2.3.0"
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
     "node": "0.10.x"
