--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "dependencies": {
     "cleverbot-node": "^0.3.5",
     "hubot": "^2.19.0",
+    "hubot-ascii-art": "^1.1.1",
     "hubot-catfacts": "^1.0.1",
     "hubot-decides": "0.0.8",
     "hubot-diagnostics": "0.0.1",
+    "hubot-google": "^0.1.2",
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "1.0.2",
     "hubot-humanity": "^0.1.3",
+    "hubot-isup": "^1.0.2",
     "hubot-maps": "0.0.2",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
@@ -22,6 +25,7 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^4.3.3",
+    "hubot-wolfram": "^1.1.0",
     "wolfram": "^0.3.4"
   },
   "engines": {
