--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Matt Kemp <matt@mattikus.com>",
   "description": "a crazy sonofabitch",
   "dependencies": {
-    "cleverbot-node": "^0.3.5",
     "hubot": "^2.19.0",
     "hubot-ascii-art": "^1.1.1",
     "hubot-catfacts": "^1.0.1",
+    "hubot-cleverbot-api": "^1.1.0",
     "hubot-decides": "0.0.8",
     "hubot-diagnostics": "0.0.1",
     "hubot-google": "^0.1.2",
@@ -25,8 +25,7 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^4.3.3",
-    "hubot-wolfram": "^1.1.0",
-    "wolfram": "^0.3.4"
+    "hubot-wolfram": "^1.1.0"
   },
   "engines": {
     "node": ">= 0.10.x",
