--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hubot-cleverbot-api": "^1.1.0",
     "hubot-decides": "0.0.8",
     "hubot-diagnostics": "0.0.1",
+    "hubot-github-webhooks-listener": "^0.9.1",
     "hubot-google": "^0.1.2",
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
